--- a/vercel.json
+++ b/vercel.json
@@ -6,9 +6,9 @@
       "use": "@vercel/node"
     }
   ],
-  "headers": [
+  "routes": [
     {
-      "source": "/(.*)",
+      "src": "/(.*)",
       "dest": "src/main.ts",
       "methods": ["GET", "POST", "PUT", "DELETE"],
       "headers": [
